# MentalHealthApp

./: .gitignore
backend/: main.py
backend/app/: firebase_auth.py  main.py  pyproject.toml  requirements.txt
backend/app/api/: auth.py  chatbot.py  interactive_exercises.py  journal.py  mood_tracker.py  progress_tracking.py  therapy_modules.py
backend/app/chatbot_engine/: chatbot.py  models.py
backend/app/models/: recommendation.py
frontend/mental-health-app/: package-lock.json  package.json
frontend/mental-health-app/public/: index.html
frontend/mental-health-app/src/: App.js  Router.js  firebase.js
frontend/mental-health-app/src/components/: Chatbot.js  HomeScreen.js  InteractiveExercises.js  MoodTracker.js  ProgressTracking.js  TherapyModules.js
frontend/mental-health-app/src/components/Auth/:  Register.js  Login.js
frontend/mental-health-app/src/routes/: HomeRoute.js  routesConfig.js
frontend/mental-health-app/src/styles/: home.css
