[tool.poetry]
name = "mental-health-app"
version = "0.1.0"
description = "FastAPI backend for mental health app"
authors = ["Sunil Kumar <sunilkatta830@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.22"
fastapi-users = "^3.3.1"
httpx = "^0.19.0"
gunicorn = "^20.1.0"
dialogflow = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
